--- a/QuanlyDuAn/DoiTac/DoiTac.csproj
+++ b/QuanlyDuAn/DoiTac/DoiTac.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
